--- a/Etch a sketch.css
+++ b/Etch a sketch.css
@@ -1,9 +1,26 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0;
+}
+
+#holder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    width: 500px;
+    border-radius: 30px;
+    margin: 0px auto;
+    border: 5px solid white; 
+}
+
+#btn-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
 }
 
 #container {
@@ -20,6 +37,18 @@ body {
     border: 1px solid black;
     transition: background-color 0.3s ease-in-out; /* Add a smooth transition effect */
 
+}
+
+#new-grid,
+#reset-btn {
+    background-color: gold;
+    font-size: 30px;
+    color: white;
+    padding: 25px 20px;
+    border: 2px solid goldenrod;
+    border-radius: 10px;
+    width: 200px;
+    margin: 30px 0px;
 }
 
 
