--- a/Etch a sketch.css
+++ b/Etch a sketch.css
@@ -1,18 +1,12 @@
-body {
-    height: 100vh;
-    margin: 0;
+#main-container{
+    display: inline-block;  
 }
 
 #holder {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background-color: white;
-    width: 500px;
-    border-radius: 30px;
-    margin: 0px auto;
-    border: 5px solid white; 
+    justify-content: center; 
 }
 
 #btn-container {
@@ -24,23 +18,33 @@ body {
 }
 
 #container {
+
     display: grid;
-    grid-template-columns: repeat(16, 30px); /* Adjust the width of the grid squares */
-    grid-template-rows: repeat(16, 30px);    /* Adjust the height of the grid squares */
-    gap: 1px; /* Adjust the gap between grid squares */
+    gap: 1px;
+    border: 1px solid black;
+    background-color: white;
+    max-width: 100%;
+    max-height: 80vh; /* Adjust as needed */
+    margin-top: 50px;
+    border-radius: 5px;
+    
+    
 }
 
 .grid-item {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
+    aspect-ratio: 1 / 1; /* Maintain square aspect ratio */
     background-color: white;
     border: 1px solid black;
     transition: background-color 0.3s ease-in-out; /* Add a smooth transition effect */
+    cursor: pointer;
 
 }
 
 #new-grid,
-#reset-btn {
+#reset-btn,
+#rainbow {
     background-color: gold;
     font-size: 30px;
     color: white;
